objects/ServiceAgentSessionEngagement__dlm.object
<CustomObject>
    <fields>
        <fullName>AbandonmentStatus__c</fullName>
        <label>Abandonment Status</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AgentTTR__c</fullName>
        <label>Agent Time To Resolution</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Channel__c</fullName>
        <label>Channel</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CopilotName__c</fullName>
        <label>Copilot Name</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DeflectionStatus__c</fullName>
        <label>Deflection Status</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EngagementStatus__c</fullName>
        <label>Engagement Status</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EscalationStatus__c</fullName>
        <label>Escalation Status</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IsVerifiedUser__c</fullName>
        <label>Is Verified User</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>KQ_SessionID__c</fullName>
        <label>Key Qualifier Session ID</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MessagingSessionID__c</fullName>
        <label>Messaging Session ID</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NumMessagesBeforeEscalation__c</fullName>
        <label>Number Of Messages Before Escalation</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NumMessages__c</fullName>
        <label>Number Of Messages</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NumOffTopics__c</fullName>
        <label>Number Of Off-Topic</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OverallTTR__c</fullName>
        <label>Overall Time To Resolution</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SessionEndTime__c</fullName>
        <label>Session End Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SessionID__c</fullName>
        <label>Session ID</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SessionStartTime__c</fullName>
        <label>Session Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TimeBeforeEscalation__c</fullName>
        <label>Time Before Escalation</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UserID__c</fullName>
        <label>User ID</label>
        <length>60</length>
        <type>Text</type>
    </fields>
</CustomObject>